fix: too small of images now fit properly

--- a/src/views/blog-post/post-title-header/post-title-header.module.scss
+++ b/src/views/blog-post/post-title-header/post-title-header.module.scss
@@ -144,7 +144,7 @@
 
 .coverImg {
 	max-height: 860px;
-	max-width: 100%;
+	width: 100%;
 	border-radius: 32px;
 	overflow: hidden;
 	margin-top: var(--article-header_details_padding-vertical);
